--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
       <h1 class="title">Get Back to Work!</h1>
       <h1 class="title">To-Do List</h1>
     </div>
-    <div class="textEntry">
-      <input id="enter to-do" type="text" />
-      <input id="button" type="submit" value="Add" />
-    </div>
+
+    <form>
+      <div class="textEntry">
+        <input id="enter to-do" type="text" />
+        <button id="button" type="submit">Add</button>
+      </div>
+    </form>
+
     <script src="index.js"></script>
   </body>
 </html>
