--- a/index.html
+++ b/index.html
@@ -19,10 +19,7 @@
         <input type="submit" id="submit" value="Add" />
       </form>
       <div class="to-do-items">
-        <ul id="todo-list">
-          <li>Pussy</li>
-          <li>Dicks Rule The World.com</li>
-        </ul>
+        <ul id="todo-list"></ul>
       </div>
     </div>
     <script src="index.js"></script>
