Refactoring JS code with code review

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="main-container">
       <form id="toDoEntry">
-        <input type="text" />
+        <input type="text" id="toDoEntryText" />
         <input type="submit" id="submit" value="Add" />
       </form>
       <div class="to-do-items">
