--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <input type="submit" id="submit" value="Add" />
       </form>
       <div class="to-do-items">
-        <ul id="todo-list"></ul>
+        <ul id="todo-list" style="text-decoration: none;"></ul>
       </div>
     </div>
     <script src="index.js"></script>
